# bachelor-karakov

./: .gitignore  README.md
FrontEnd/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
FrontEnd/app/: globals.css  layout.jsx  page.jsx
FrontEnd/app/auth/forgot-password/: page.jsx
FrontEnd/app/auth/login/: page.jsx
FrontEnd/app/auth/register/: page.jsx
FrontEnd/app/journal-history/: page.jsx
FrontEnd/app/profile/: page.jsx
FrontEnd/components/: chat.jsx  chatbot-section.jsx  daily-mood-tracker.jsx  dashboard.jsx  emotion-tracker.jsx  header.jsx  markdown-renderer.tsx  mood-history.jsx  tests-section.jsx
FrontEnd/components/ui/: card.jsx  chart.jsx  date-picker.jsx  donut-chart.jsx
FrontEnd/contexts/: auth-context.jsx
FrontEnd/lib/: navigation-utils.js  session-utils.js  supabase.js
RestApi/: Dockerfile  docker-compose.yml  emotion_predictor.py  main.py  models.py  pyproject.toml  server.py  utils.py
RestApi/data/prompts/: chat.txt
RestApi/libs/: __init__.py
RestApi/libs/gpt/: __init__.py  chat.py  client.py  rescore.py
RestApi/libs/jwt_token/: __init__.py  auth_scheme.py  decoder.py  utils.py
RestApi/libs/supaclient/: __init__.py  supaclient.py
RestApi/tests/: test_emotion_classifier.py  test_gpt.py  test_models.py  test_server.py
